<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ni.com.groupi.tracking_app.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00BCD4"
        >
        <TextView
            android:id="@+id/lbbienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/boxsend"
            android:src="@drawable/send"
            android:layout_below="@id/lbbienvenida"
            />


    </RelativeLayout>

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:elevation="80dp"
       app:cardCornerRadius="30dp"
       android:layout_marginBottom="-20dp"
       >
       
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="30dp"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#00BCD4"
                />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ingrese_sus_credenciales"
               android:alpha="0.7"

               />

           <View
               android:layout_width="match_parent"
               android:layout_height="30dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/correo"
               android:alpha="0.7"
               />
           
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:autofillHints="Email"
               android:inputType="textEmailAddress"
               tools:ignore="LabelFor" />
           <View
               android:layout_width="match_parent"
               android:layout_height="20dp"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/hintPassword"
               android:alpha="0.7"
               />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:autofillHints="password"
               android:inputType="textPassword"
               android:drawableEnd="@drawable/eye_icon"
               tools:ignore="LabelFor" />
           
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <CheckBox
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/recordarme"
                   android:layout_centerVertical="true"
                   android:alpha="0.7"
                   />

           </RelativeLayout>

           <View
               android:layout_width="match_parent"
               android:layout_height="10dp"/>

           <com.google.android.material.button.MaterialButton
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:text="@string/lbSign_in"
               app:cornerRadius="30dp"
               android:backgroundTint="#00BCD4"
               />

           <View
               android:layout_width="match_parent"
               android:layout_height="20dp"/>

           <TextView
               android:id="@+id/txtCopyRight"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="18dp"
               android:text="@string/copyRight" />

       </LinearLayout>




   </androidx.cardview.widget.CardView>








</androidx.constraintlayout.widget.ConstraintLayout>