<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ni.com.groupi.tracking_app.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/cardFormLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbbienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbReservas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFormLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-40dp"
        android:elevation="80dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nombre"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_border"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                tools:ignore="LabelFor" />


            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/correo"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_border"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/hintPassword"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/eye_icon"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="LabelFor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/repetirPassword"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_border"
                android:drawableEnd="@drawable/eye_icon"
                android:inputType="textPassword"
                android:padding="10dp"
                tools:ignore="LabelFor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAcceder"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="center"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/lbSign_up"
                android:textColor="#4CAF50"
                android:textStyle="bold"
                app:cornerRadius="30dp"
                app:strokeColor="#4CAF50"
                app:strokeWidth="2dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>