<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ni.com.groupi.tracking_app.activity.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:backgroundTint="@color/backColor"
        style="@style/custom_card_view"
        android:layout_height="300dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:background="@color/backColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/home"
                app:menu="@menu/menu"/>

        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView2"
                    android:layout_width="343dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="36dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="43dp"
                            android:layout_height="41dp"
                            android:layout_marginStart="16dp"
                            android:backgroundTint="@color/transparent"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.555"
                            app:srcCompat="@drawable/calendar" />

                        <TextView
                            android:id="@+id/txtDateInit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageButton2"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtGion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/gion"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txtDateInit"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtDateEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/date"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txtGion"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="30dp"
                            android:layout_height="37dp"
                            android:layout_marginStart="4dp"
                            android:backgroundTint="@color/backColor"
                            android:drawableEnd="@drawable/filter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.8"
                            app:layout_constraintStart_toEndOf="@+id/txtDateEnd"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.333" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView3"
                    android:layout_width="346dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="44dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                        app:layout_constraintVertical_bias="1.0" />

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="348dp"
                    android:layout_height="430dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/white"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialCardView3">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/taskList"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.113"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="28dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="9dp"
                            android:text="@string/proyect"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="36dp"
                            android:layout_marginBottom="9dp"
                            android:text="@string/task"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            app:layout_constraintStart_toEndOf="@+id/textView3" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginBottom="9dp"
                            android:text="@string/expiration"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            app:layout_constraintStart_toEndOf="@+id/textView4" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="9dp"
                            android:text="@string/status"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.304"
                            app:layout_constraintStart_toEndOf="@+id/textView5" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="353dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="40dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="293dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/divider"
                            app:layout_constraintVertical_bias="0.482" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>